Implement secure diagnostics (metrics, pprof, log level changes)
Signed-off-by: Stefan Büringer buringerst@vmware.com

--- a/docs/book/src/developer/providers/migrations/v1.5-to-v1.6.md
+++ b/docs/book/src/developer/providers/migrations/v1.5-to-v1.6.md
@@ -38,3 +38,5 @@ maintainers of providers and consumers of our Go API.
 ### Suggested changes for providers
 
 - In order to reduce dependencies for API package consumers, CAPI has diverged from the default kubebuilder scheme builder. This new pattern may also be useful for reducing dependencies in provider API packages. For more information [see the implementers guide.](../implementers-guide/create_api.md#registering-apis-in-the-scheme)
+- We deprecated the `--metrics-bind-addr` flag and introduced the new `--diagnostics-address` and `--insecure-diagnostic` flags. These flags allow exposing metrics, a pprof endpoint and 
+  an endpoint to change log levels securely in production. It is recommended to implement the same changes in providers, please see [#9264](https://github.com/kubernetes-sigs/cluster-api/pull/9264) for more details.
