Remove the dependency on cluster-api/utils from addons API
Signed-off-by: killianmuldoon <kmuldoon@vmware.com>

--- a/docs/book/src/developer/providers/migrations/v1.5-to-v1.6.md
+++ b/docs/book/src/developer/providers/migrations/v1.5-to-v1.6.md
@@ -18,7 +18,8 @@ maintainers of providers and consumers of our Go API.
 ## Changes by Kind
 
 ### Deprecation
-
+- The function `sigs.k8s.io/cluster-api/addons/api/v1beta1` `DeleteBinding` has been deprecated. Please use `RemoveBinding` from the same package instead.
+- 
 ### Removals
 
 - API version `v1alpha4` is not served in v1.6 (users can enable it manually in case they are lagging behind with deprecation cycles). Important: `v1alpha4` will be completely removed in 1.7.
