Make release notes tool not dependent on local git
Now all the date is retrieved through GitHub APIs, making the tool more
portable and easier to use. It should not increase the rate limiting
chances since it now performs less API requests (by getting the label
from all PRs at once instead of with one request per PR).

--- a/hack/tools/release/notes/test/golden/v1.5.0.md
+++ b/hack/tools/release/notes/test/golden/v1.5.0.md
@@ -17,7 +17,7 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 
 ## Changes since v1.4.0
 ## :chart_with_upwards_trend: Overview
-- 335 new commits merged
+- 339 new commits merged
 - 4 breaking changes :warning:
 - 19 feature additions ✨
 - 67 bugs fixed 🐛
@@ -57,9 +57,9 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 - CAPD: Add kind mapper (#8880)
 - CAPD: Change the haproxy entrypoint to prevent getting stopped immediately after start (#8685)
 - CAPD: Delegate CAPD port selection to the container runtime (#8642)
+- CAPD: Fix fail-swap-on=false flag not being part of kind images anymore (#8767)
 - CAPD: Implement watch filter (#8789)
 - CAPD: Test/capd: fix kind mapper entry for v1.25.11 (#8914)
-- CAPD: Test/e2e fix fail-swap-on=false flag not being part of kind images anymore (#8767)
 - CAPIM: Fix cluster deletion in the in-memory API server (#8818)
 - CAPIM: Fix inmemory provider docker build (#8822)
 - CAPIM: Test/e2e/in-memory: set providerID after VM is provisioned (#8879)
@@ -150,6 +150,7 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 - ClusterClass: Cluster/topology: use cached MD list in get current state (#8922)
 - ClusterClass: Deprecate rolloutAfter in cluster topology (#8324)
 - ClusterClass: Upgrading control plane should only be blocked if MD are upgrading (not just rolling out) (#8658)
+- clusterctl: Add CABPOCNE and CACPOCNE Providers (#9068)
 - clusterctl: Add labels to OWNERS file (#8342)
 - clusterctl: Add move annotation on objects for cluster move operation (#8322)
 - clusterctl: Bump controller-tools to v0.12 (#8581)
@@ -179,6 +180,7 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 - Dependency: Bump github.com/onsi/ginkgo/v2 from 2.9.5 to 2.9.7 (#8792)
 - Dependency: Bump github.com/onsi/ginkgo/v2 from 2.9.7 to 2.10.0 (#8839)
 - Dependency: Bump github.com/onsi/gomega from 1.27.4 to 1.27.5 (#8390)
+- Dependency: Bump github.com/onsi/gomega from 1.27.5 to 1.27.6 (#8460)
 - Dependency: Bump github.com/onsi/gomega from 1.27.6 to 1.27.7 (#8715)
 - Dependency: Bump github.com/onsi/gomega from 1.27.7 to 1.27.8 (#8841)
 - Dependency: Bump github.com/prometheus/client_golang from 1.14.0 to 1.15.0 (#8541)
@@ -293,7 +295,7 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 - util: Move `internal.labels` to `format` package for use by providers (#9006)
 - util: Rename internal/util/ssa util functions for better naming consistency (#8423)
 
-:book: Additionally, there have been 72 contributions to our documentation and book. (#8252, #8279, #8284, #8288, #8293, #8307, #8308, #8309, #8319, #8327, #8351, #8355, #8363, #8375, #8383, #8397, #8416, #8419, #8439, #8446, #8447, #8454, #8508, #8509, #8510, #8511, #8520, #8521, #8552, #8554, #8559, #8580, #8587, #8593, #8596, #8597, #8612, #8613, #8630, #8632, #8651, #8661, #8673, #8686, #8699, #8701, #8712, #8719, #8729, #8740, #8753, #8760, #8762, #8763, #8775, #8779, #8781, #8782, #8787, #8798, #8802, #8805, #8812, #8843, #8854, #8901, #8924, #8932, #8955, #8956, #8958, #8960) 
+:book: Additionally, there have been 74 contributions to our documentation and book. (#8252, #8279, #8284, #8288, #8293, #8307, #8308, #8309, #8319, #8327, #8351, #8355, #8363, #8375, #8383, #8397, #8416, #8419, #8439, #8446, #8447, #8454, #8508, #8509, #8510, #8511, #8520, #8521, #8544, #8552, #8554, #8559, #8580, #8587, #8593, #8596, #8597, #8612, #8613, #8630, #8632, #8651, #8661, #8673, #8686, #8699, #8701, #8712, #8719, #8729, #8740, #8753, #8760, #8762, #8763, #8775, #8779, #8781, #8782, #8787, #8798, #8802, #8805, #8812, #8843, #8854, #8901, #8924, #8932, #8955, #8956, #8958, #8960, #8980) 
 
 
 _Thanks to all our contributors!_ 😊
