Fix kubeadm bootstrap prefix in release notes

--- a/hack/tools/release/notes/test/golden/v1.5.0.md
+++ b/hack/tools/release/notes/test/golden/v1.5.0.md
@@ -29,7 +29,7 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 - Dependency: Bump to CR v0.15.0 (#8007)
 
 ## :sparkles: New Features
-- CAPBK: Use caching read for bootstrap config owner (#8867)
+- CABPK: Use caching read for bootstrap config owner (#8867)
 - CAPIM: Enable Kubernetes upgrades in CAPIM (#8938)
 - ClusterClass: Add support or concurrent MD upgrades in classy clusters (#8432)
 - ClusterClass: Add webhook warning for missing ClusterClass (#8746)
@@ -52,8 +52,8 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 ## :bug: Bug Fixes
 - API: All: only set finalizers if deletionTimestamp is not set (#8949)
 - API: Ensure ownerReference apiVersions are always up to date (#8256)
-- CAPBK: Ignition: start kubeadm after network.target (#8772)
-- CAPBK: Set uninitialized taint only on worker nodes (#8358)
+- CABPK: Ignition: start kubeadm after network.target (#8772)
+- CABPK: Set uninitialized taint only on worker nodes (#8358)
 - CAPD: Add kind mapper (#8880)
 - CAPD: Change the haproxy entrypoint to prevent getting stopped immediately after start (#8685)
 - CAPD: Delegate CAPD port selection to the container runtime (#8642)
@@ -120,7 +120,7 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 
 ## :seedling: Others
 - API: Deprecate v1alpha3 and v1alpha4 in CRDs (#8687)
-- CAPBK: Replace reflect deepequal in bootstrap kubeadm (#8266)
+- CABPK: Replace reflect deepequal in bootstrap kubeadm (#8266)
 - CAPD: Automatically set kubelet args for capd (#8881)
 - CAPD: Only ignore necessary kubeadm preflight errors (#7911)
 - CAPIM: Add ClusterClass support for in-memory provider (#8807)
@@ -271,7 +271,7 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 - MachineDeployment: Drop the first return value from FindOldMachineSets (#8415)
 - MachineSet: Add MachineFinalizer during machine computation (#8463)
 - MachineSet: Surface failed preflight checks on MachineSet in `MachinesCreated` condition (#8669)
-- MULTIPLE_AREAS[ClusterCacheTracker/KCP/CAPBK]: Cache secrets in KCP, CABPK and ClusterCacheTracker (#8940)
+- MULTIPLE_AREAS[ClusterCacheTracker/KCP/CABPK]: Cache secrets in KCP, CABPK and ClusterCacheTracker (#8940)
 - Release: Add area label lookup for prefixes to release notes tool (#8780)
 - Release: Add runtime extension components to release (#8438)
 - Release: Bump kpromo to v3.5.1 (#8301)
