Improve patch helper error handling
Signed-off-by: Stefan Büringer buringerst@vmware.com

--- a/docs/book/src/developer/providers/migrations/v1.6-to-v1.7.md
+++ b/docs/book/src/developer/providers/migrations/v1.6-to-v1.7.md
@@ -24,4 +24,6 @@ maintainers of providers and consumers of our Go API.
 
 ### Other
 
+* Patch helper now return error with enough error context (https://github.com/kubernetes-sigs/cluster-api/pull/9946). It is recommended to remove redundant error context on call sites if applicable.
+
 ### Suggested changes for providers
