Print dependencies in release notes

--- a/hack/tools/release/notes/test/golden/v1.5.0.md
+++ b/hack/tools/release/notes/test/golden/v1.5.0.md
@@ -161,45 +161,14 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 - clusterctl: Update cert-manager to v1.12.2 (#8883)
 - Core: Cache unstructured in Cluster, MD and MS controller (#8916)
 - Core: Remove unnecessary requeues (#8743)
-- Dependency: Bump actions/checkout from 3.3.0 to 3.4.0 (#8321)
-- Dependency: Bump actions/checkout from 3.4.0 to 3.5.0 (#8389)
-- Dependency: Bump actions/checkout from 3.5.0 to 3.5.2 (#8540)
-- Dependency: Bump actions/checkout from 3.5.2 to 3.5.3 (#8837)
-- Dependency: Bump actions/setup-go from 3.5.0 to 4.0.1 (#8664)
 - Dependency: Bump docker to v24.0.5 (#9065)
 - Dependency: Bump docker/distribution to v2.8.2 (#8645)
-- Dependency: Bump EndBug/add-and-commit from 9.1.1 to 9.1.2 (#8584)
-- Dependency: Bump EndBug/add-and-commit from 9.1.2 to 9.1.3 (#8621)
 - Dependency: Bump gcb-docker-gcloud from v20230424-910a2a439d to v20230522-312425ae46 (#8770)
 - Dependency: Bump gcb-docker-gcloud image (#8570)
 - Dependency: Bump github.com/emicklei/go-restful/v3  from 3.9.0 to 3.10.2 in /test (#9056)
-- Dependency: Bump github.com/go-logr/logr from 1.2.3 to 1.2.4 (#8461)
-- Dependency: Bump github.com/onsi/ginkgo/v2 from 2.10.0 to 2.11.0 (#8891)
-- Dependency: Bump github.com/onsi/ginkgo/v2 from 2.9.2 to 2.9.4 (#8622)
-- Dependency: Bump github.com/onsi/ginkgo/v2 from 2.9.4 to 2.9.5 (#8666)
-- Dependency: Bump github.com/onsi/ginkgo/v2 from 2.9.5 to 2.9.7 (#8792)
-- Dependency: Bump github.com/onsi/ginkgo/v2 from 2.9.7 to 2.10.0 (#8839)
-- Dependency: Bump github.com/onsi/gomega from 1.27.4 to 1.27.5 (#8390)
-- Dependency: Bump github.com/onsi/gomega from 1.27.5 to 1.27.6 (#8460)
-- Dependency: Bump github.com/onsi/gomega from 1.27.6 to 1.27.7 (#8715)
-- Dependency: Bump github.com/onsi/gomega from 1.27.7 to 1.27.8 (#8841)
-- Dependency: Bump github.com/prometheus/client_golang from 1.14.0 to 1.15.0 (#8541)
-- Dependency: Bump github.com/prometheus/client_golang from 1.15.0 to 1.15.1 (#8623)
-- Dependency: Bump github.com/prometheus/client_golang from 1.15.1 to 1.16.0 (#8890)
-- Dependency: Bump github.com/spf13/cobra from 1.6.1 to 1.7.0 (#8502)
-- Dependency: Bump github.com/spf13/viper from 1.15.0 to 1.16.0 (#8791)
 - Dependency: Bump golang version (1.20.3 -> 1.20.4) (#8749)
-- Dependency: Bump golang.org/x/oauth2 from 0.6.0 to 0.7.0 (#8503)
-- Dependency: Bump golang.org/x/oauth2 from 0.7.0 to 0.8.0 (#8665)
-- Dependency: Bump golang.org/x/oauth2 from 0.8.0 to 0.9.0 (#8889)
-- Dependency: Bump golang.org/x/oauth2 from 0.9.0 to 0.10.0 (#8985)
-- Dependency: Bump golang.org/x/text from 0.8.0 to 0.9.0 (#8504)
-- Dependency: Bump golang.org/x/text from 0.9.0 to 0.10.0 (#8840)
 - Dependency: Bump golangci-lint to 1.52.1 and fix findings (#8331)
 - Dependency: Bump golangci-lint to v1.51.2 (#8312)
-- Dependency: Bump golangci/golangci-lint-action from 3.4.0 to 3.5.0 (#8790)
-- Dependency: Bump golangci/golangci-lint-action from 3.5.0 to 3.6.0 (#8838)
-- Dependency: Bump gomodules.xyz/jsonpatch/v2 from 2.2.0 to 2.3.0 (#8716)
 - Dependency: Bump kind to v0.19.0 (#8681)
 - Dependency: Bump kindnet and haproxy images to latest (#8676)
 - Dependency: Bump to Go 1.20.6 (#9058)
@@ -297,5 +266,241 @@ REPLACE ME: A couple sentences describing the deprecation, including links to do
 
 :book: Additionally, there have been 74 contributions to our documentation and book. (#8252, #8279, #8284, #8288, #8293, #8307, #8308, #8309, #8319, #8327, #8351, #8355, #8363, #8375, #8383, #8397, #8416, #8419, #8439, #8446, #8447, #8454, #8508, #8509, #8510, #8511, #8520, #8521, #8544, #8552, #8554, #8559, #8580, #8587, #8593, #8596, #8597, #8612, #8613, #8630, #8632, #8651, #8661, #8673, #8686, #8699, #8701, #8712, #8719, #8729, #8740, #8753, #8760, #8762, #8763, #8775, #8779, #8781, #8782, #8787, #8798, #8802, #8805, #8812, #8843, #8854, #8901, #8924, #8932, #8955, #8956, #8958, #8960, #8980) 
 
+## Dependencies
+
+### Added
+- cloud.google.com/go/apigeeregistry: v0.6.0
+- cloud.google.com/go/apikeys: v0.6.0
+- github.com/adrg/xdg: [v0.4.0](https://github.com/adrg/xdg/tree/v0.4.0)
+- github.com/alecthomas/kingpin/v2: [v2.3.1](https://github.com/alecthomas/kingpin/tree/v2.3.1)
+- github.com/golang-jwt/jwt/v4: [v4.4.2](https://github.com/golang-jwt/jwt/tree/v4.4.2)
+- github.com/golangplus/bytes: [v1.0.0](https://github.com/golangplus/bytes/tree/v1.0.0)
+- github.com/golangplus/fmt: [v1.0.0](https://github.com/golangplus/fmt/tree/v1.0.0)
+- github.com/golangplus/testing: [v1.0.0](https://github.com/golangplus/testing/tree/v1.0.0)
+- github.com/google/s2a-go: [v0.1.3](https://github.com/google/s2a-go/tree/v0.1.3)
+- github.com/xhit/go-str2duration: [v1.2.0](https://github.com/xhit/go-str2duration/tree/v1.2.0)
+- sigs.k8s.io/kustomize/cmd/config: v0.11.1
+- sigs.k8s.io/kustomize/kustomize/v5: v5.0.1
+
+### Changed
+- cloud.google.com/go/accessapproval: v1.5.0 → v1.6.0
+- cloud.google.com/go/accesscontextmanager: v1.4.0 → v1.7.0
+- cloud.google.com/go/aiplatform: v1.27.0 → v1.37.0
+- cloud.google.com/go/analytics: v0.12.0 → v0.19.0
+- cloud.google.com/go/apigateway: v1.4.0 → v1.5.0
+- cloud.google.com/go/apigeeconnect: v1.4.0 → v1.5.0
+- cloud.google.com/go/appengine: v1.5.0 → v1.7.1
+- cloud.google.com/go/area120: v0.6.0 → v0.7.1
+- cloud.google.com/go/artifactregistry: v1.9.0 → v1.13.0
+- cloud.google.com/go/asset: v1.10.0 → v1.13.0
+- cloud.google.com/go/assuredworkloads: v1.9.0 → v1.10.0
+- cloud.google.com/go/automl: v1.8.0 → v1.12.0
+- cloud.google.com/go/baremetalsolution: v0.4.0 → v0.5.0
+- cloud.google.com/go/batch: v0.4.0 → v0.7.0
+- cloud.google.com/go/beyondcorp: v0.3.0 → v0.5.0
+- cloud.google.com/go/bigquery: v1.44.0 → v1.50.0
+- cloud.google.com/go/billing: v1.7.0 → v1.13.0
+- cloud.google.com/go/binaryauthorization: v1.4.0 → v1.5.0
+- cloud.google.com/go/certificatemanager: v1.4.0 → v1.6.0
+- cloud.google.com/go/channel: v1.9.0 → v1.12.0
+- cloud.google.com/go/cloudbuild: v1.4.0 → v1.9.0
+- cloud.google.com/go/clouddms: v1.4.0 → v1.5.0
+- cloud.google.com/go/cloudtasks: v1.8.0 → v1.10.0
+- cloud.google.com/go/compute: v1.14.0 → v1.20.1
+- cloud.google.com/go/contactcenterinsights: v1.4.0 → v1.6.0
+- cloud.google.com/go/container: v1.7.0 → v1.15.0
+- cloud.google.com/go/containeranalysis: v0.6.0 → v0.9.0
+- cloud.google.com/go/datacatalog: v1.8.0 → v1.13.0
+- cloud.google.com/go/dataflow: v0.7.0 → v0.8.0
+- cloud.google.com/go/dataform: v0.5.0 → v0.7.0
+- cloud.google.com/go/datafusion: v1.5.0 → v1.6.0
+- cloud.google.com/go/datalabeling: v0.6.0 → v0.7.0
+- cloud.google.com/go/dataplex: v1.4.0 → v1.6.0
+- cloud.google.com/go/dataproc: v1.8.0 → v1.12.0
+- cloud.google.com/go/dataqna: v0.6.0 → v0.7.0
+- cloud.google.com/go/datastore: v1.10.0 → v1.11.0
+- cloud.google.com/go/datastream: v1.5.0 → v1.7.0
+- cloud.google.com/go/deploy: v1.5.0 → v1.8.0
+- cloud.google.com/go/dialogflow: v1.19.0 → v1.32.0
+- cloud.google.com/go/dlp: v1.7.0 → v1.9.0
+- cloud.google.com/go/documentai: v1.10.0 → v1.18.0
+- cloud.google.com/go/domains: v0.7.0 → v0.8.0
+- cloud.google.com/go/edgecontainer: v0.2.0 → v1.0.0
+- cloud.google.com/go/essentialcontacts: v1.4.0 → v1.5.0
+- cloud.google.com/go/eventarc: v1.8.0 → v1.11.0
+- cloud.google.com/go/filestore: v1.4.0 → v1.6.0
+- cloud.google.com/go/functions: v1.9.0 → v1.13.0
+- cloud.google.com/go/gaming: v1.8.0 → v1.9.0
+- cloud.google.com/go/gkebackup: v0.3.0 → v0.4.0
+- cloud.google.com/go/gkeconnect: v0.6.0 → v0.7.0
+- cloud.google.com/go/gkehub: v0.10.0 → v0.12.0
+- cloud.google.com/go/gkemulticloud: v0.4.0 → v0.5.0
+- cloud.google.com/go/gsuiteaddons: v1.4.0 → v1.5.0
+- cloud.google.com/go/iam: v0.8.0 → v0.13.0
+- cloud.google.com/go/iap: v1.5.0 → v1.7.1
+- cloud.google.com/go/ids: v1.2.0 → v1.3.0
+- cloud.google.com/go/iot: v1.4.0 → v1.6.0
+- cloud.google.com/go/kms: v1.6.0 → v1.10.1
+- cloud.google.com/go/language: v1.8.0 → v1.9.0
+- cloud.google.com/go/lifesciences: v0.6.0 → v0.8.0
+- cloud.google.com/go/logging: v1.6.1 → v1.7.0
+- cloud.google.com/go/longrunning: v0.3.0 → v0.4.1
+- cloud.google.com/go/managedidentities: v1.4.0 → v1.5.0
+- cloud.google.com/go/maps: v0.1.0 → v0.7.0
+- cloud.google.com/go/mediatranslation: v0.6.0 → v0.7.0
+- cloud.google.com/go/memcache: v1.7.0 → v1.9.0
+- cloud.google.com/go/metastore: v1.8.0 → v1.10.0
+- cloud.google.com/go/monitoring: v1.8.0 → v1.13.0
+- cloud.google.com/go/networkconnectivity: v1.7.0 → v1.11.0
+- cloud.google.com/go/networkmanagement: v1.5.0 → v1.6.0
+- cloud.google.com/go/networksecurity: v0.6.0 → v0.8.0
+- cloud.google.com/go/notebooks: v1.5.0 → v1.8.0
+- cloud.google.com/go/optimization: v1.2.0 → v1.3.1
+- cloud.google.com/go/orchestration: v1.4.0 → v1.6.0
+- cloud.google.com/go/orgpolicy: v1.5.0 → v1.10.0
+- cloud.google.com/go/osconfig: v1.10.0 → v1.11.0
+- cloud.google.com/go/oslogin: v1.7.0 → v1.9.0
+- cloud.google.com/go/phishingprotection: v0.6.0 → v0.7.0
+- cloud.google.com/go/policytroubleshooter: v1.4.0 → v1.6.0
+- cloud.google.com/go/privatecatalog: v0.6.0 → v0.8.0
+- cloud.google.com/go/pubsub: v1.27.1 → v1.30.0
+- cloud.google.com/go/pubsublite: v1.5.0 → v1.7.0
+- cloud.google.com/go/recaptchaenterprise/v2: v2.5.0 → v2.7.0
+- cloud.google.com/go/recommendationengine: v0.6.0 → v0.7.0
+- cloud.google.com/go/recommender: v1.8.0 → v1.9.0
+- cloud.google.com/go/redis: v1.10.0 → v1.11.0
+- cloud.google.com/go/resourcemanager: v1.4.0 → v1.7.0
+- cloud.google.com/go/resourcesettings: v1.4.0 → v1.5.0
+- cloud.google.com/go/retail: v1.11.0 → v1.12.0
+- cloud.google.com/go/run: v0.3.0 → v0.9.0
+- cloud.google.com/go/scheduler: v1.7.0 → v1.9.0
+- cloud.google.com/go/secretmanager: v1.9.0 → v1.10.0
+- cloud.google.com/go/security: v1.10.0 → v1.13.0
+- cloud.google.com/go/securitycenter: v1.16.0 → v1.19.0
+- cloud.google.com/go/servicecontrol: v1.5.0 → v1.11.1
+- cloud.google.com/go/servicedirectory: v1.7.0 → v1.9.0
+- cloud.google.com/go/servicemanagement: v1.5.0 → v1.8.0
+- cloud.google.com/go/serviceusage: v1.4.0 → v1.6.0
+- cloud.google.com/go/shell: v1.4.0 → v1.6.0
+- cloud.google.com/go/spanner: v1.41.0 → v1.45.0
+- cloud.google.com/go/speech: v1.9.0 → v1.15.0
+- cloud.google.com/go/storagetransfer: v1.6.0 → v1.8.0
+- cloud.google.com/go/talent: v1.4.0 → v1.5.0
+- cloud.google.com/go/texttospeech: v1.5.0 → v1.6.0
+- cloud.google.com/go/tpu: v1.4.0 → v1.5.0
+- cloud.google.com/go/trace: v1.4.0 → v1.9.0
+- cloud.google.com/go/translate: v1.4.0 → v1.7.0
+- cloud.google.com/go/video: v1.9.0 → v1.15.0
+- cloud.google.com/go/videointelligence: v1.9.0 → v1.10.0
+- cloud.google.com/go/vision/v2: v2.5.0 → v2.7.0
+- cloud.google.com/go/vmmigration: v1.3.0 → v1.6.0
+- cloud.google.com/go/vmwareengine: v0.1.0 → v0.3.0
+- cloud.google.com/go/vpcaccess: v1.5.0 → v1.6.0
+- cloud.google.com/go/webrisk: v1.7.0 → v1.8.0
+- cloud.google.com/go/websecurityscanner: v1.4.0 → v1.5.0
+- cloud.google.com/go/workflows: v1.9.0 → v1.10.0
+- cloud.google.com/go: v0.105.0 → v0.110.0
+- github.com/alecthomas/template: [fb15b89 → a0175ee](https://github.com/alecthomas/template/compare/fb15b89...a0175ee)
+- github.com/alecthomas/units: [ff826a3 → b94a6e3](https://github.com/alecthomas/units/compare/ff826a3...b94a6e3)
+- github.com/census-instrumentation/opencensus-proto: [v0.2.1 → v0.4.1](https://github.com/census-instrumentation/opencensus-proto/compare/v0.2.1...v0.4.1)
+- github.com/cespare/xxhash/v2: [v2.1.2 → v2.2.0](https://github.com/cespare/xxhash/compare/v2.1.2...v2.2.0)
+- github.com/cncf/udpa/go: [04548b0 → c52dc94](https://github.com/cncf/udpa/compare/04548b0...c52dc94)
+- github.com/cncf/xds/go: [cb28da3 → 32f1caf](https://github.com/cncf/xds/compare/cb28da3...32f1caf)
+- github.com/coreos/go-systemd/v22: [v22.3.2 → v22.4.0](https://github.com/coreos/go-systemd/compare/v22.3.2...v22.4.0)
+- github.com/creack/pty: [v1.1.11 → v1.1.18](https://github.com/creack/pty/compare/v1.1.11...v1.1.18)
+- github.com/docker/distribution: [v2.8.1+incompatible → v2.8.2+incompatible](https://github.com/docker/distribution/compare/v2.8.1...v2.8.2)
+- github.com/envoyproxy/go-control-plane: [49ff273 → v0.11.0](https://github.com/envoyproxy/go-control-plane/compare/49ff273...v0.11.0)
+- github.com/envoyproxy/protoc-gen-validate: [v0.1.0 → v0.10.0](https://github.com/envoyproxy/protoc-gen-validate/compare/v0.1.0...v0.10.0)
+- github.com/frankban/quicktest: [v1.14.3 → v1.14.4](https://github.com/frankban/quicktest/compare/v1.14.3...v1.14.4)
+- github.com/go-errors/errors: [v1.0.1 → v1.4.2](https://github.com/go-errors/errors/compare/v1.0.1...v1.4.2)
+- github.com/go-kit/kit: [v0.9.0 → v0.8.0](https://github.com/go-kit/kit/compare/v0.9.0...v0.8.0)
+- github.com/go-kit/log: [v0.2.0 → v0.2.1](https://github.com/go-kit/log/compare/v0.2.0...v0.2.1)
+- github.com/go-logr/logr: [v1.2.3 → v1.2.4](https://github.com/go-logr/logr/compare/v1.2.3...v1.2.4)
+- github.com/go-logr/zapr: [v1.2.3 → v1.2.4](https://github.com/go-logr/zapr/compare/v1.2.3...v1.2.4)
+- github.com/go-openapi/jsonpointer: [v0.19.5 → v0.19.6](https://github.com/go-openapi/jsonpointer/compare/v0.19.5...v0.19.6)
+- github.com/go-openapi/jsonreference: [v0.20.0 → v0.20.1](https://github.com/go-openapi/jsonreference/compare/v0.20.0...v0.20.1)
+- github.com/go-task/slim-sprig: [348f09d → 52ccab3](https://github.com/go-task/slim-sprig/compare/348f09d...52ccab3)
+- github.com/golang/glog: [23def4e → v1.1.0](https://github.com/golang/glog/compare/23def4e...v1.1.0)
+- github.com/google/pprof: [94a9f03 → 4bb14d4](https://github.com/google/pprof/compare/94a9f03...4bb14d4)
+- github.com/googleapis/enterprise-certificate-proxy: [v0.2.1 → v0.2.3](https://github.com/googleapis/enterprise-certificate-proxy/compare/v0.2.1...v0.2.3)
+- github.com/googleapis/gax-go/v2: [v2.7.0 → v2.8.0](https://github.com/googleapis/gax-go/compare/v2.7.0...v2.8.0)
+- github.com/hashicorp/consul/api: [v1.18.0 → v1.20.0](https://github.com/hashicorp/consul/compare/api/v1.18.0...api/v1.20.0)
+- github.com/inconshreveable/mousetrap: [v1.0.1 → v1.1.0](https://github.com/inconshreveable/mousetrap/compare/v1.0.1...v1.1.0)
+- github.com/konsorten/go-windows-terminal-sequences: [v1.0.3 → v1.0.1](https://github.com/konsorten/go-windows-terminal-sequences/compare/v1.0.3...v1.0.1)
+- github.com/kr/pretty: [v0.3.0 → v0.3.1](https://github.com/kr/pretty/compare/v0.3.0...v0.3.1)
+- github.com/matttproud/golang_protobuf_extensions: [v1.0.2 → v1.0.4](https://github.com/matttproud/golang_protobuf_extensions/compare/v1.0.2...v1.0.4)
+- github.com/moby/term: [39b0c02 → 1aeaba8](https://github.com/moby/term/compare/39b0c02...1aeaba8)
+- github.com/onsi/ginkgo/v2: [v2.9.1 → v2.11.0](https://github.com/onsi/ginkgo/compare/v2.9.1...v2.11.0)
+- github.com/onsi/gomega: [v1.27.4 → v1.27.8](https://github.com/onsi/gomega/compare/v1.27.4...v1.27.8)
+- github.com/pelletier/go-toml/v2: [v2.0.6 → v2.0.8](https://github.com/pelletier/go-toml/compare/v2.0.6...v2.0.8)
+- github.com/prometheus/client_golang: [v1.14.0 → v1.16.0](https://github.com/prometheus/client_golang/compare/v1.14.0...v1.16.0)
+- github.com/prometheus/client_model: [v0.3.0 → v0.4.0](https://github.com/prometheus/client_model/compare/v0.3.0...v0.4.0)
+- github.com/prometheus/common: [v0.37.0 → v0.42.0](https://github.com/prometheus/common/compare/v0.37.0...v0.42.0)
+- github.com/prometheus/procfs: [v0.8.0 → v0.10.1](https://github.com/prometheus/procfs/compare/v0.8.0...v0.10.1)
+- github.com/rogpeppe/go-internal: [v1.6.1 → v1.10.0](https://github.com/rogpeppe/go-internal/compare/v1.6.1...v1.10.0)
+- github.com/sagikazarmark/crypt: [v0.9.0 → v0.10.0](https://github.com/sagikazarmark/crypt/compare/v0.9.0...v0.10.0)
+- github.com/sirupsen/logrus: [v1.8.1 → v1.9.0](https://github.com/sirupsen/logrus/compare/v1.8.1...v1.9.0)
+- github.com/spf13/afero: [v1.9.3 → v1.9.5](https://github.com/spf13/afero/compare/v1.9.3...v1.9.5)
+- github.com/spf13/cast: [v1.5.0 → v1.5.1](https://github.com/spf13/cast/compare/v1.5.0...v1.5.1)
+- github.com/spf13/cobra: [v1.6.1 → v1.7.0](https://github.com/spf13/cobra/compare/v1.6.1...v1.7.0)
+- github.com/spf13/viper: [v1.15.0 → v1.16.0](https://github.com/spf13/viper/compare/v1.15.0...v1.16.0)
+- github.com/stretchr/testify: [v1.8.1 → v1.8.3](https://github.com/stretchr/testify/compare/v1.8.1...v1.8.3)
+- github.com/tmc/grpc-websocket-proxy: [e5319fd → 673ab2c](https://github.com/tmc/grpc-websocket-proxy/compare/e5319fd...673ab2c)
+- go.etcd.io/etcd/api/v3: v3.5.6 → v3.5.9
+- go.etcd.io/etcd/client/pkg/v3: v3.5.6 → v3.5.9
+- go.etcd.io/etcd/client/v2: v2.305.6 → v2.305.7
+- go.etcd.io/etcd/client/v3: v3.5.6 → v3.5.9
+- go.etcd.io/etcd/pkg/v3: v3.5.5 → v3.5.7
+- go.etcd.io/etcd/raft/v3: v3.5.5 → v3.5.7
+- go.etcd.io/etcd/server/v3: v3.5.5 → v3.5.7
+- go.opentelemetry.io/contrib/instrumentation/net/http/otelhttp: v0.35.0 → v0.35.1
+- go.uber.org/goleak: v1.2.0 → v1.2.1
+- golang.org/x/crypto: v0.3.0 → v0.11.0
+- golang.org/x/lint: 6edffad → 83fdc39
+- golang.org/x/mod: v0.9.0 → v0.10.0
+- golang.org/x/net: v0.8.0 → v0.12.0
+- golang.org/x/oauth2: v0.6.0 → v0.10.0
+- golang.org/x/sync: v0.1.0 → v0.2.0
+- golang.org/x/sys: v0.6.0 → v0.10.0
+- golang.org/x/term: v0.6.0 → v0.10.0
+- golang.org/x/text: v0.8.0 → v0.11.0
+- golang.org/x/tools: v0.7.0 → v0.9.3
+- gomodules.xyz/jsonpatch/v2: v2.2.0 → v2.3.0
+- google.golang.org/api: v0.107.0 → v0.122.0
+- google.golang.org/genproto: f9683d7 → daa745c
+- google.golang.org/grpc: v1.52.0 → v1.55.0
+- google.golang.org/protobuf: v1.28.1 → v1.31.0
+- gopkg.in/square/go-jose.v2: v2.2.2 → v2.6.0
+- k8s.io/api: v0.26.1 → v0.27.2
+- k8s.io/apiextensions-apiserver: v0.26.1 → v0.27.2
+- k8s.io/apimachinery: v0.26.1 → v0.27.2
+- k8s.io/apiserver: v0.26.1 → v0.27.2
+- k8s.io/cli-runtime: v0.25.0 → v0.27.2
+- k8s.io/client-go: v0.26.1 → v0.27.2
+- k8s.io/cluster-bootstrap: v0.25.0 → v0.27.2
+- k8s.io/code-generator: v0.26.1 → v0.27.2
+- k8s.io/component-base: v0.26.1 → v0.27.2
+- k8s.io/component-helpers: v0.25.0 → v0.27.2
+- k8s.io/klog/v2: v2.80.1 → v2.90.1
+- k8s.io/kms: v0.26.1 → v0.27.2
+- k8s.io/kube-openapi: 172d655 → 8b0f38b
+- k8s.io/kubectl: v0.25.0 → v0.27.2
+- k8s.io/metrics: v0.25.0 → v0.27.2
+- k8s.io/utils: 99ec85e → a36077c
+- sigs.k8s.io/apiserver-network-proxy/konnectivity-client: v0.0.35 → v0.1.2
+- sigs.k8s.io/controller-runtime: v0.14.5 → v0.15.0
+- sigs.k8s.io/json: f223a00 → bc3834c
+- sigs.k8s.io/kustomize/api: v0.12.1 → v0.13.2
+- sigs.k8s.io/kustomize/kyaml: v0.13.9 → v0.14.1
+
+### Removed
+- github.com/PuerkitoBio/purell: [v1.1.1](https://github.com/PuerkitoBio/purell/tree/v1.1.1)
+- github.com/PuerkitoBio/urlesc: [de5bf2a](https://github.com/PuerkitoBio/urlesc/tree/de5bf2a)
+- github.com/elazarl/goproxy: [947c36d](https://github.com/elazarl/goproxy/tree/947c36d)
+- github.com/form3tech-oss/jwt-go: [v3.2.3+incompatible](https://github.com/form3tech-oss/jwt-go/tree/v3.2.3)
+- github.com/niemeyer/pretty: [a10e7ca](https://github.com/niemeyer/pretty/tree/a10e7ca)
+- github.com/russross/blackfriday: [v1.5.2](https://github.com/russross/blackfriday/tree/v1.5.2)
+- gotest.tools/v3: v3.0.3
+- sigs.k8s.io/kustomize/kustomize/v4: v4.5.7
 
 _Thanks to all our contributors!_ 😊
