change changelog entry to inclue cert-manager to 1.14.2
Signed-off-by: Troy Connor <troy0820@users.noreply.github.com>

--- a/CHANGELOG/v1.5.6.md
+++ b/CHANGELOG/v1.5.6.md
@@ -14,11 +14,11 @@
 - ClusterCacheTracker: Fix ClusterCacheTracker memory leak (#10065)
 
 ## :seedling: Others
-- clusterctl: Bump cert-manager to v1.14.1 (#10121)
+- clusterctl: Bump cert-manager to v1.14.2 (#10121) (#10128)
 - Community meeting: Promote chrischdi to Cluster API maintainer (#10090)
 - Dependency: Bump Go to 1.21.5 (#10153)
 
-:book: Additionally, there has been 1 contribution to our documentation and book. (#10117) 
+:book: Additionally, there has been 1 contribution to our documentation and book. (#10117)
 
 
 _Thanks to all our contributors!_ 😊
