--- a/CHANGELOG/v1.6.2.md
+++ b/CHANGELOG/v1.6.2.md
@@ -20,7 +20,7 @@
 - Machine: Watch external objects for machine before deleting (#10177)
 
 ## :seedling: Others
-- clusterctl: Bump cert-manager to v1.14.1 (#10120)
+- clusterctl: Bump cert-manager to v1.14.2 (#10120) (#10127)
 - clusterctl: Clarify rules for adding new clusterctl default providers (#10109)
 - Community meeting: Promote chrischdi to Cluster API maintainer (#10089)
 - Dependency: Bump controller runtime v0.16.5 (#10163)
@@ -28,7 +28,7 @@
 - e2e: Use manager in test extension (#10106)
 - Testing: Print conformance image used in kubetest (#10081)
 
-:book: Additionally, there have been 4 contributions to our documentation and book. (#10024, #10047, #10105, #10116) 
+:book: Additionally, there have been 4 contributions to our documentation and book. (#10024, #10047, #10105, #10116)
 
 
 _Thanks to all our contributors!_ 😊
