--- a/CHANGELOG/v1.7.0-beta.1.md
+++ b/CHANGELOG/v1.7.0-beta.1.md
@@ -1,4 +1,4 @@
-🚨 This is a RELEASE CANDIDATE. Use it only for testing purposes. If you find any bugs, file an [issue](https://github.com/kubernetes-sigs/cluster-api/issues/new).
+🚨 This is a BETA RELEASE. Use it only for testing purposes. If you find any bugs, file an [issue](https://github.com/kubernetes-sigs/cluster-api/issues/new).
 
 ## Highlights
 
