Document MachinePool feature flag promotion
Signed-off-by: Nolan Brubaker <nolan@nbrubaker.com>

--- a/docs/book/src/developer/providers/migrations/v1.6-to-v1.7.md
+++ b/docs/book/src/developer/providers/migrations/v1.6-to-v1.7.md
@@ -28,3 +28,11 @@ maintainers of providers and consumers of our Go API.
 * Patch helper now return error with enough error context (https://github.com/kubernetes-sigs/cluster-api/pull/9946). It is recommended to remove redundant error context on call sites if applicable.
 
 ### Suggested changes for providers
+
+* [MachinePools are now enabled by default](https://github.com/kubernetes-sigs/cluster-api/pull/10141) and the feature flag is marked as `beta` instead of `alpha`. If you are re-defining feature flags in your codebase, these values will need to be updated accordingly. If not, the following error will result:
+
+    ```
+    panic: feature gate "MachinePool" with different spec already exists: {true false BETA}
+    ```
+
+    See [this change](https://github.com/kubernetes-sigs/cluster-api-provider-aws/pull/4897/files#diff-bd8758c39c0deb35ee6c5c387594f6575580918777fbf2926f5762c7c9fce755L104) for how to update the flag.
