Addressed review comments
Signed-off-by: Vishal Anarase <iamvishalanarase@gmail.com>

--- a/CHANGELOG/v1.7.2.md
+++ b/CHANGELOG/v1.7.2.md
@@ -24,7 +24,7 @@
 - clusterctl: Add Tinkerbell to the providers list (#10516)
 - clusterctl: Bump cert-manager to 1.14.5 (#10517)
 - clusterctl: Clusterctl/client/cert_manager: improve shouldUpgrade (#10497)
-- clusterctl: Feat: add support for the linode-linode infrastructure provider to clusterctl (#10512)
+- clusterctl: Add support for the linode-linode infrastructure provider to clusterctl (#10512)
 - e2e: Ensure resourceVersions are stable (#10548)
 - MULTIPLE_AREAS[KCP/MachineSet]: Flag for old infra machine naming (#10587)
 
