Addressed review comments
Signed-off-by: Vishal Anarase <iamvishalanarase@gmail.com>

--- a/CHANGELOG/v1.7.2.md
+++ b/CHANGELOG/v1.7.2.md
@@ -22,7 +22,7 @@
 - clusterctl: Clusterctl/client/cert_manager: improve shouldUpgrade (#10497)
 - clusterctl: Add support for the linode-linode infrastructure provider to clusterctl (#10512)
 - e2e: Ensure resourceVersions are stable (#10548)
-- MULTIPLE_AREAS[KCP/MachineSet]: Flag for old infra machine naming (#10587)
+- KCP/MachineSet: Flag for old infra machine naming (#10587)
 
 :book: Additionally, there have been 2 contributions to our documentation and book. (#10535, #10536) 
 
