fix broken kubebuilder link in old docs

--- a/docs/book/src/developer/providers/migrations/v0.3-to-v0.4.md
+++ b/docs/book/src/developer/providers/migrations/v0.3-to-v0.4.md
@@ -92,7 +92,7 @@ If flag has not provided, default value from `controller-runtime` should be used
 In an effort to simplify the management of Cluster API components, and realign with Kubebuilder configuration,
 we're requiring some changes to move all webhooks back into a single deployment manager, and to allow Cluster
 API watch all namespaces it manages.
-For a `/config` folder reference, please use the testdata in the Kubebuilder project: https://github.com/kubernetes-sigs/kubebuilder/tree/master/testdata/project-v3/config
+For a `/config` folder reference, please use the testdata in the Kubebuilder project: https://github.com/kubernetes-sigs/kubebuilder/tree/release-3.15/testdata/project-v3/config
 
 **Pre-requisites**
 
