Add QPS & burst options & flags for ClusterCacheTracker
Signed-off-by: Stefan Büringer buringerst@vmware.com

--- a/docs/book/src/developer/providers/migrations/v1.7-to-v1.8.md
+++ b/docs/book/src/developer/providers/migrations/v1.7-to-v1.8.md
@@ -27,3 +27,5 @@ maintainers of providers and consumers of our Go API.
 - It's highly recommended to move to a new setup-envtest version that uses envtest binaries from controller-tools releases
   instead of the deprecated GCS bucket. More details can be found in [#10569](https://github.com/kubernetes-sigs/cluster-api/pull/10569)
   and [kubernetes-sigs/controller-runtime#2811](https://github.com/kubernetes-sigs/controller-runtime/pull/2811).
+- `remote.NewClusterCacheTracker` now has options to configure QPS & Burst. It's highly recommended to implement corresponding flags
+  the same way as core Cluster API (see PR: https://github.com/kubernetes-sigs/cluster-api/pull/10880).
