Also use tls options for metrics/diagnostics server
Signed-off-by: Alex Price <aprice@atlassian.com>

--- a/docs/book/src/developer/providers/migrations/v1.7-to-v1.8.md
+++ b/docs/book/src/developer/providers/migrations/v1.7-to-v1.8.md
@@ -29,3 +29,4 @@ maintainers of providers and consumers of our Go API.
   and [kubernetes-sigs/controller-runtime#2811](https://github.com/kubernetes-sigs/controller-runtime/pull/2811).
 - `remote.NewClusterCacheTracker` now has options to configure QPS & Burst. It's highly recommended to implement corresponding flags
   the same way as core Cluster API (see PR: https://github.com/kubernetes-sigs/cluster-api/pull/10880).
+- There were changes made to flags in core CAPI (https://github.com/kubernetes-sigs/cluster-api/pull/10883, https://github.com/kubernetes-sigs/cluster-api/pull/10880). It's recommended to adopt these changes in providers as well. 
