--- a/docs/book/src/developer/providers/migrations/v1.8-to-v1.9.md
+++ b/docs/book/src/developer/providers/migrations/v1.8-to-v1.9.md
@@ -29,3 +29,9 @@ maintainers of providers and consumers of our Go API.
 ### Suggested changes for providers
 
 - The Errors package was created when capi provider implementation was running as machineActuators that needed to vendor core capi to function. There is no usage recommendations today and its value is questionable since we moved to CRDs that inter-operate mostly via conditions. Instead we plan to drop the dedicated semantic for terminal failure and keep improving Machine lifecycle signal through conditions. Therefore the Errors package [has been deprecated in v1.8](https://github.com/kubernetes-sigs/cluster-api/issues/10784). It's recommended to remove any usage of the currently exported variables.
+- The `ClusterCacheTracker` component has been deprecated, please use the new `ClusterCache` instead. For more context and examples for 
+  how to use it, see [PR: Introduce new ClusterCache](https://github.com/kubernetes-sigs/cluster-api/pull/11247) and the corresponding
+  [issue](https://github.com/kubernetes-sigs/cluster-api/issues/11272). Some notes:
+  - The `DisabledFor` option (previously `ClientUncachedObjects`) is not defaulted to `&corev1.ConfigMap` & `&corev1.Secret` anymore, 
+    thus it's now necessary to explicitly set `DisabledFor` to avoid caching ConfigMaps and Secrets.
+  - `SecretClient` and `UserAgent` are now mandatory options, please take a look at the corresponding godoc.
