:seedling: Release notes `v1.9.0-rc.1` fix

--- a/CHANGELOG/v1.9.0-rc.1.md
+++ b/CHANGELOG/v1.9.0-rc.1.md
@@ -50,7 +50,7 @@
 
 ## Changes since v1.9.0-rc.0
 ## :chart_with_upwards_trend: Overview
-- 16 new commits merged
+- 20 new commits merged
 - 2 breaking changes :warning:
 - 3 bugs fixed 🐛
 
@@ -65,11 +65,15 @@
 
 ## :seedling: Others
 - clusterctl: Properly indent multiline lists in clusterctl describe (#11509)
+- Conditions: Drop unused v1beta2 conditions and reasons (#11523)
 - Conditions: KCP: make EtcdMemberHealthy less verbose on client creation failures (#11510)
 - Conditions: Machine: sort list of hooks for stable condition messages (#11488)
 - Conditions: Refine v1beta2 summary (#11499)
 - Conditions: Refine v1beta2 UpToDate and Rollout conditions (#11507)
+- Conditions: Small improvements to v1beta2 conditions godoc (#11528)
+- Dependency: Update controller-runtime to v0.19.3 (#11527)
 - e2e: Use latest kind image for K8s1.31 in E2E tests (#11511)
+- KCP: Drop retry when computing KCP conditions (#11522)
 - KCP: Drop unnecessary etcd call from KCP (#11493)
 - KCP: Refine KCP's Available, ControlPlaneComponentsHealthy, EtcdClusterHealthy v1beta2 conditions (#11512)
 - Machine: Refine v1beta2 NodeHealthy condition (#11497)
@@ -82,7 +86,7 @@
 _Nothing has changed._
 
 ### Changed
-_Nothing has changed._
+- sigs.k8s.io/controller-runtime: v0.19.2 → v0.19.3
 
 ### Removed
 _Nothing has changed._
@@ -92,7 +96,7 @@ _Nothing has changed._
 
 ## Changes since v1.8.0
 ## :chart_with_upwards_trend: Overview
-- 338 new commits merged
+- 342 new commits merged
 - 5 breaking changes :warning:
 - 33 feature additions ✨
 - 39 bugs fixed 🐛
@@ -128,6 +132,7 @@ _Nothing has changed._
 - KCP: Add v1beta2 available condition to KCP (#11383)
 - KCP: Add v1beta2 Etcd and ControlPlaneComponents conditions to KCP (#11302)
 - KCP: Add v1beta2 OwnerRemediated condition to KCP (#11297)
+- KCP/CAPD: Add more v1beta2 conditions to KCP (#11320)
 - Logging: Suppress finalizer name API warnings in CAPI, CABPK, and KCP controller logs (#11242)
 - Machine: Implement MachineDrainRules (#11353)
 - Machine: Introduce Deletion status field and add timestamps for drain and volumeDetach instead of using the condition (#11166)
@@ -136,7 +141,6 @@ _Nothing has changed._
 - MachineHealthCheck: Update MHC with v1Beta2 status (#11290)
 - MachineSet: Add machine UpToDate condition to MachineSet (#11393)
 - MachineSet: Promote MachineSetPreflightChecks to Beta (#11228)
-- KCP/CAPD]: Add more v1beta2 conditions to KCP (#11320)
 - Testing: Bump Kubernetes in tests to v1.31.0 and claim support for v1.31 (#11030)
 - Testing: Collect additional logs with CAPD log collector (#11083)
 - util: Implement utils for v1beta2 conditions (#10997)
@@ -209,6 +213,7 @@ _Nothing has changed._
 - ClusterClass: Implement Cluster TopologyReconciled v1beta2 condition (#11394)
 - ClusterClass: Improve reconcile state logs (don't log empty diff) (#11013)
 - ClusterClass: Make Type in ClusterClass variable schema properly optional (#11259)
+- ClusterClass/MachinePool: Remove paused handling from reconcileExternal (#11400)
 - clusterctl: Add Canonical Kubernetes providers (#11337)
 - clusterctl: Add nutanix ipam & runtime extensions providers (#11135)
 - clusterctl: Add vultr infrastructure provider (#11091)
@@ -226,6 +231,7 @@ _Nothing has changed._
 - Conditions: Add v1beta2 RollingOut condition (#11463)
 - Conditions: Cluster: split MachinesReady and MachinesUpToDate into ControlPlane and Worker specific conditions (#11461)
 - Conditions: Crs: implement ResourcesApplied v1beta2 condition (#11467)
+- Conditions: Drop unused v1beta2 conditions and reasons (#11523)
 - Conditions: Fix messages of conditions used for summaries and aggregations (#11435)
 - Conditions: Ignore new Machines when calculating MachinesUpToDate condition (#11433)
 - Conditions: KCP: handle members without name in MemberNames (#11446)
@@ -235,6 +241,7 @@ _Nothing has changed._
 - Conditions: Refine v1beta2 stale deletion messages (#11434)
 - Conditions: Refine v1beta2 summary (#11499)
 - Conditions: Refine v1beta2 UpToDate and Rollout conditions (#11507)
+- Conditions: Small improvements to v1beta2 conditions godoc (#11528)
 - Conditions: Various improvements of v1beta2 conditions (#11422)
 - Core: Audit patch withOwnedConditions (#11396)
 - Core: Refactor Cluster controller (#11345)
@@ -247,6 +254,7 @@ _Nothing has changed._
 - Dependency: Bump setup-envtest to v0.19 (#11063)
 - Dependency: Bump to Go 1.22.7 (#11156)
 - Dependency: Remove Go dependencies on k8s.io/kubectl, k8s.io/metrics, sigs.k8s.io/kustomize, ... (#11295)
+- Dependency: Update controller-runtime to v0.19.3 (#11527)
 - Devtools: Fix parsing of `config.live_reload_deps` from Tilt provider config file (#11270)
 - e2e: Add dry-run CreateOrUpdate call in clusterctl upgrade e2e tests (#11349)
 - e2e: Bump kind to v0.24.0 (#11081)
@@ -272,6 +280,7 @@ _Nothing has changed._
 - KCP: Bump corefile-migration to support CoreDNS v1.11.3 (#10980)
 - KCP: Cache Pods for KCP (#11453)
 - KCP: Change Pod does not exist message to allow aggregation (#11447)
+- KCP: Drop retry when computing KCP conditions (#11522)
 - KCP: Drop unnecessary etcd call from KCP (#11493)
 - KCP: Ensure ReadinessGates for v1beta2 conditions get set (#11335)
 - KCP: Propagate timeouts to Machines with deletionTimestamp (#11128)
@@ -282,6 +291,7 @@ _Nothing has changed._
 - KCP: Remove code handling Kubernetes <= v1.21 (#11146)
 - KCP: Retry in case of etcd errors in KCP (#11450)
 - KCP: Skip validation if CoreDNS migration library supports an upgrade if the library is not used (#11319)
+- KCP/MachineSet: Implement KCP and MS Deleting conditions (#11381)
 - Logging: Drop internal log package & improve logs and errors (#11025)
 - Logging: Drop ReconcileError events (#11341)
 - Logging: Fix error handling when the resource is not found (#10907)
@@ -303,19 +313,16 @@ _Nothing has changed._
 - Machine: Refine v1beta2 machine ready (#11437)
 - Machine: Refine v1beta2 NodeHealthy condition (#11497)
 - Machine: Use internal error reason consistently (#11309)
+- Machine/KCP: Implement grace period for KCP remote conditions (#11339)
 - MachineDeployment: Refine MachineDeployment v1beta2 available condition (#11505)
 - MachineHealthCheck: Increase timeout for 2 MHC unit tests (#11019)
 - MachinePool: Improve TestReconcileMachinePoolMachines unit test (#11124)
 - MachineSet: Add MD watch to the MS controller (#11448)
 - MachineSet: Extend MS ScalingUp and Remediationg conditions to include preflight check errors (#11390)
 - MachineSet: Implement MS remediating conditions (#11382)
+- MachineSet/MachineDeployment: Foreground deletion for MachineDeployments and MachineSets (#11174)
 - Metrics: Add nilIsZero to all KSM metric configs where needed (#11101)
 - Metrics: Revert "Add nilIsZero to all KSM metric configs where needed" (#11107)
-- ClusterClass/MachinePool: Remove paused handling from reconcileExternal (#11400)
-- KCP/MachineSet: Implement KCP and MS Deleting conditions (#11381)
-- Machine/KCP: Implement grace period for KCP remote conditions (#11339)
-- MachineSet/MachineDeployment: Foreground deletion for MachineDeployments and MachineSets (#11174)
-- Testing/Runtime SDK: Add nodeVolumeDetachTimeout & minReadySeconds for MD to RuntimeSDK e2e test template (#10933)
 - Release: Add v1.9 release team members to timeline doc (#11097)
 - Release: Prepare main branch for v1.9 development (#11059)
 - Release: Swap in new 1.9 RT members in OWNERS (#11096)
@@ -332,6 +339,7 @@ _Nothing has changed._
 - Testing: Test/framework: allow users to modify cache.Options (#11201)
 - Testing: Test/framework: GetCAPIResources should warn on rbac issues (#11205)
 - Testing: Use latest atomic variable instead of old one (#11328)
+- Testing/Runtime SDK: Add nodeVolumeDetachTimeout & minReadySeconds for MD to RuntimeSDK e2e test template (#10933)
 - util: Add input validations for controllers (#11327)
 - util: Add new utility function to set LastTransitionTime only when status of condition changes (#11176)
 - util: Add support for v1beta2 conditions to patch helper (#11150)
@@ -439,7 +447,7 @@ _Nothing has changed._
 - k8s.io/kms: v0.30.3 → v0.31.3
 - k8s.io/utils: b307cd5 → 18e509b
 - sigs.k8s.io/apiserver-network-proxy/konnectivity-client: v0.30.0 → v0.30.3
-- sigs.k8s.io/controller-runtime: v0.18.4 → v0.19.2
+- sigs.k8s.io/controller-runtime: v0.18.4 → v0.19.3
 
 ### Removed
 - github.com/chai2010/gettext-go: [v1.0.2](https://github.com/chai2010/gettext-go/tree/v1.0.2)
